# medusa-ssg

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  SIMPLIFICATION.md  TODOS.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
design/: project.md
hooks/: pre-commit
medusa/: __init__.py  __main__.py  asset_processors.py  asset_resolver.py  assets.py  build.py  cli.py  collections.py  content.py  executable_utils.py  extractors.py  feeds.py  html_utils.py  protocols.py  renderers.py  server.py  templates.py  utils.py
medusa/templates/default/: llms.txt  medusa.yaml  tailwind.config.js
medusa/templates/default/assets/css/: pygments.css
medusa/templates/default/site/_layouts/: default.html.jinja
medusa/templates/default/site/posts/: 2024-01-04-data-in-templates.md  2024-01-05-examples.md  2024-01-09-asset-helpers.md
tests/: test_assets_and_build.py  test_cli.py  test_collections.py  test_content.py  test_server.py  test_solid_modules.py  test_templates.py  test_utils.py
