[project]
name = "medusa-ssg"
version = "0.1.7"
description = "Minimal Python static site generator. Markdown + Jinja2, Tailwind CSS built-in, zero configuration, no frontmatter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "wusher" }]

keywords = [
  "static-site-generator",
  "ssg",
  "markdown",
  "jinja2",
  "tailwind",
  "blog",
  "website",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "mistune>=3.0",
  "pygments>=2.17",
  "pyyaml>=6.0",
  "questionary>=2.0",
  "watchdog>=4.0",
  "websockets>=12.0",
  "rjsmin>=1.2",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.8.0"]

[project.urls]
Homepage = "https://github.com/yourname/medusa-ssg"
Repository = "https://github.com/yourname/medusa-ssg"
Issues = "https://github.com/yourname/medusa-ssg/issues"
Documentation = "https://github.com/yourname/medusa-ssg#readme"

[project.scripts]
medusa = "medusa.cli:main"

[tool.setuptools]
packages = ["medusa"]

[tool.setuptools.package-data]
medusa = ["templates/**/*"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["medusa"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
